html/css/style.css
/* ... */
table.content_table th, 
table.content_table td {
    border-width: 0.15rem;
    padding: 0.3rem;
}

table.content_table th {
    font-weight: bold;
    background-color: var(--bv-big-highlight);
    color: var(--bv-main-bg-color);
    border-bottom: 0.15rem solid var(--bv-big-highlight);
}

table.content_table tr:hover {
    background-color: var(--bv-darker-lightgray);
}

/* tables end */
/* entities */
.entity {
    cursor: pointer;
}

.entity-table {
    margin: 4em auto;
}

.entity-table tbody tr td,
.entity-table tbody tr th {
    border: none;
}

.entity-table tbody tr th {
    border-right: 1px solid lightgrey;
}

.modal-body table tbody tr th,
.modal-body table tbody tr td {
    border: none;
}

#wrapper-footer-full {
    border-top: 0.3rem solid var(--bv-big-highlight);
    margin-top: auto;
    display: flex;
    background-color: var(--bv-main-bg-color);
    z-index: 1;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

#wrapper-footer-full div div a img {
    max-width: 200px;
    height: auto;
    margin-top: 1rem;
    margin-bottom: 1.5rem;
}

div#wrapper-footer-secondary {
    text-align: center;
    padding: 0.4rem 0;
    font-size: 0.9rem;
    background-color: var(--bv-big-highlight);
    color: var(--bv-main-bg-color);
}

div#wrapper-footer-secondary a {
    color: var(--bv-main-bg-color);
}


hr {
    visibility: collapse;
    margin: 0rem;
}

a.anchorFoot {
    position: relative;
    top: -110px;
    visibility: hidden;
}

.footnote_link {
    display: inline-block;
    width: 2em;
    text-align: right;
    margin: 0 .7em 0 -2.7em;
}

.footnotes li {
    list-style: none;
    padding: .3em 0;
}

.footnotes {
    padding: 1em;
}

.wp-transcript {
    margin: 2em auto;
    margin-top: 0;
}

#edition_metadata {
    padding: 1rem;
    padding-left: 4rem;
    background-color: rgba(var(--bv-big-highlight-rgb), 0.2);
    margin-bottom: 2rem;
}

.wp-transcript .card-header {
    padding: 2em 0;
}

#editor-widget {
    position: fixed;
    right: 10%;
    max-width: 100px;
    padding: .5em;
    background-color: var(--bv-big-highlight);
    color: #fff;
    border-radius: 1rem;
    box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, .1);
    z-index: 2;
}


.navBarNavDropdown {
    position: relative;
    display: block;
    text-align: left;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.dropdown-menu {
    height: fit-content !important;
    max-height: 800px !important;
    overflow-x: hidden !important;
}

a.nav-link.dropdown-toggle {
    border-left: 0.2rem solid transparent;
}

a.nav-link.dropdown-toggle.show,
a.nav-link.dropdown-toggle:active {
    border-left: 0.2rem solid var(--bv-contrast);
    color: var(--bv-contrast);
}

li ul.dropdown-menu.show {
    background: var(--bv-big-highlight);
    /*color: var(--bv-main-bg-color);*/
    color: var(--bv-main-bg-color);
    border: none;
    border-left: 0.2rem solid var(--bv-contrast);
    margin-top: 0;
    border-radius: 0;
}

#chapter_navigation {
    max-width: 20rem;
}

#chapter_navigation a {
    white-space: normal !important;
    hyphens: auto;
}

.bi-journals {
    color: #fff;
    fill: #fff;
}

.bi-book {
    color: #fff;
    fill: #fff;
}

.bi-pencil-square {
    color: #fff;
    fill: #fff;
}

.fas {
    color: var(--bv-big-highlight);
}

#text-resize {
    min-height: 600px;
}

.navBarNavDropdown a {
    position: relative;
    display: block;
}

/*chapter navigation*/
.section_ref>a {
    font-weight: bolder;
    padding-left: 0.75rem;
    padding-top: 0.25rem;
}

.section_ref>ul {
    padding-left: 0.5rem;
}

li.article_ref:first-child {
    padding-top: 0. 5rem;
}

li.article_ref:last-child {
    padding-bottom: 1rem;
}

.article_ref>a {
    font-weight: normal;
    padding-left: 1.5rem;
}

#staticSearch {
    padding: 2em;
}

/* transcription quality disclaimer */

body.page>div#text_quality_disclaimer {
    hyphens: auto;
    background: gray;
    color: white;
    left: 50%;
    top: 50%;
    width: 40rem;
    opacity: 0.9;
    height: fit-content;
    margin-left: -20rem;
    margin-top: -25vh;
    padding: 2rem;
}

body.page>div#text_quality_disclaimer div {
    background: gray;
}

/**** Font Aweseome ***/
/* don't remove this or the download icon breaks !!!*/
h3 a i.fas {
    font-family: "Font Awesome 5 Free" !important;
}

.img-fluid {
    height: 5vh;
}

.card {
    margin: 2em auto;
    box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, .1);
    background-color: var(--bv-main-bg-color);
}

.img_bottom {
    padding: 6em 0;
    margin: 0 auto;
}

.img_bottom .col-md-6 {
    padding: 2em;
}

.index-card {
    margin-top: 0 !important;
    box-shadow: none !important;
    transition: transform .2s;

}

/*.card-body img {
    border-radius: .35rem .35rem 0 0;
}*/

.index-card .card-header {
    background-color: transparent;
    border: none;
    color: var(--bv-big-highlight);
}

/* default: display no linebreaks */

div#text-resize div.card-body.mimetic_lbs {
    max-width: 55rem;
}

div#text-resize div.card-body.non_mimetic_lbs {
    max-width: 40rem;
}

span.pb,
span.pb::before,
span.pb::marker {
    font-size: 1rem;
}

span.pb {
    visibility: visible;
    line-height: inherit;
    display: inline-block;
    position: absolute;
    left: -1.5rem;
    scroll-margin-top: 100px;
    /* width: 1.5rem;
    margin-top: var(--default-line-height-negative); */
}
 
span.pb::before {
    display: inline-block;
    opacity: 0.5;
    font-weight: bold;
    content: "| " var(--beginning_page);
    text-align: right;
    left: -1.5rem;
}

span.pb_marker {
    color: grey;
}

span.pb_marker::after {
    font-size: inherit;
    font-weight: bold;
    content: " | ";
}
/* ... */

